--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,11 @@ body{
     padding: 30px;
 }
 
-h1{
+.tituloPrincipal{
+    padding-left: 20px;
+}
+
+.tituloCentralizado{
     text-align: center;
 }
 
@@ -34,10 +38,6 @@ em strong {
 
 .itens{
     font-style: italic;
-}
-
-h2{
-    text-align: center;
 }
 
 ul{
