--- a/css/produtos.css
+++ b/css/produtos.css
@@ -1,5 +1,19 @@
 header{
     background: #bbbbbb;
+    padding: 20px 0;
+}
+
+.caixa {
+    position: relative;
+    width: 940px;
+    margin: 0 auto;
+}
+
+nav {
+     position: absolute;
+     right: 0;
+     top: 110px;
+
 }
 
 nav li{
@@ -14,7 +28,6 @@ nav a{
     font-size: 22px;
     text-decoration: none;
 }
-
 
 
 
