--- a/css/produtos.css
+++ b/css/produtos.css
@@ -79,9 +79,17 @@ nav a:hover {
     margin-top: 10px;
 }
 
+footer {
+    text-align: center;
+    background: url("../img/produtos/bg.jpg");
+    padding: 40px 0;
+}
 
-
-
+.copyright{
+    color: #FFFFFF;
+    font-size: 13px;
+    margin-top: 20px;
+}
 
 
 
