--- a/css/style.css
+++ b/css/style.css
@@ -1,51 +1,101 @@
-body{
-    /*background: #cccccc;*/
+header{
+    background: #bbbbbb;
+    padding: 20px 0;
 }
 
-#banner{
-    width: 100%;
+.caixa {
+    position: relative;
+    width: 940px;
+    margin: 0 auto;
 }
 
-.principal{
-    background: #cccccc;
-    padding: 30px;
+nav {
+     position: absolute;
+     right: 0;
+     top: 110px;
+
 }
 
-.tituloPrincipal{
-    padding-left: 20px;
+nav li{
+    display: inline;
+    margin: 0 0 0 15px;
 }
 
-.tituloCentralizado{
-    text-align: center;
+nav a{
+    text-transform: uppercase;
+    color: #000000;
+    font-weight: bold;
+    font-size: 22px;
+    text-decoration: none;
 }
 
-p {
-    text-align: center;
+nav a:hover {
+    color: #C78C19;
+    text-decoration: underline;
 }
 
-#missao{
-    font-size: 20px;
+.produtos {
+    width: 940px;
+    margin: 0 auto;
+    padding: 50px 0;
 }
 
-em strong {
-    color: #FF0000;
-}
-
-.beneficios{
-    background: #ffffff;
-    padding: 20px;
-}
-
-.itens{
-    font-style: italic;
-}
-
-ul{
+.produtos li {
     display: inline-block;
+    text-align: center;
+    width: 30%;
     vertical-align: top;
-    width: 20%;
-    margin-right: 15%;
+    margin: 0 1.5%;
+    padding: 30px 20px;
+    box-sizing: border-box;
+    border: 2px solid #000000;
+    border-radius: 10px;
 }
-.imagemBeneficios{
-    width: 50%;
+
+.produtos li:hover {
+    border-color: #C78C19;
 }
+
+.produtos li:active {
+    border-color: #088C19;
+}
+
+.produtos li:hover h2 {
+    font-size: 35px;
+}
+
+.produtos h2 {
+    font-size: 30px;
+    font-weight: bold;
+}
+
+.produto-descricao {
+    font-size: 18px;
+}
+
+.produto-preco {
+    font-size: 22px;
+    font-weight: bold;
+    margin-top: 10px;
+}
+
+footer {
+    text-align: center;
+    background: url("../img/produtos/bg.jpg");
+    padding: 40px 0;
+}
+
+.copyright{
+    color: #FFFFFF;
+    font-size: 13px;
+    margin-top: 20px;
+}
+
+
+
+
+
+
+
+
+
