--- a/css/style.css
+++ b/css/style.css
@@ -117,6 +117,25 @@ form label, form legend {
     margin: 20px 0;
 }
 
+.enviar {
+    width: 40%;
+    padding: 15px 0;
+    background: orange;
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
+    border: none;
+    border-radius: 5px;
+    transition: 1s all;
+    cursor: pointer;
+}
+
+.enviar:hover {
+    background: darkorange;
+    /*transform: scale(1.2) rotate(70deg);*/
+    transform: scale(1.2);
+}
+
 
 
 
