--- a/css/style.css
+++ b/css/style.css
@@ -135,9 +135,52 @@ form label, form legend {
     /*transform: scale(1.2) rotate(70deg);*/
     transform: scale(1.2);
 }
+table {
+    margin: 20px 40px;
+}
 
+thead {
+    background: #555555;
+    color: white;
+    font-weight: bold;
+}
+td, th {
+    border: 1px solid #000000;
+    padding: 15px 8px;
+}
 
+/* css da página inicial */
+.banner {
+    width: 100%;
+}
 
+.tituloPrincipal {
+    text-align: center;
+    font-size: 2em;
+    margin: 0 0 1em;
+    clear: left;
+    /*border: 1px solid #000000;*/
+}
 
+.principal p {
+    margin: 0 0 1em;
+}
 
+.principal strong {
+    font-weight: bold;
+}
+
+.principal em {
+    font-style: italic;
+}
+
+.utensilios {
+    width: 120px;
+    float: left;
+    margin: 0 20px 20px 0; /*cima direita baixo esquerda*/
+}
+
+.imagemBeneficios {
+    width: 60%;
+}
 
